修改一点错误样式，现在功能正常

--- a/标签选项卡.html
+++ b/标签选项卡.html
@@ -15,7 +15,7 @@
        #ult li{background:#fff;cursor:pointer;float:left;list-style:none;
            height:28px;line-height:28px;margin:0px 3px;width:60px;
            border:1px solid #aaa;border-bottom:none;display:inline-block;text-align:center;}
-       #ult li .on{border-top:2px solid saddlebrown ;border-bottom:2px solid #fff;}
+       #ult .on{border-top:2px solid saddlebrown ;border-bottom:2px solid #fff;}
        #tabs div{height:120px;line-height:25px;padding:5px;
            border:1px solid #336699;border-top:none;}
        #tabs div li{height: 30px;line-height: 30px;text-indent: 8px;}
